# linear-case-study

./: README.md  linear-case-study.pptx  pyproject.toml  ~$linear-case-study.pptx
src/linear_case_study/: __init__.py  linear_case_study.ipynb
