[project]
name = "linear-case-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean McLeaish", email = "smcleaish@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0.dev20251117",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tensorflow>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
